<package>
  <name>raspi_interface</name>
  <version>0.0.1</version>
  <description>The raspi_interface package implements a hardware 
    interface for the bosch_drivers package and can only run on a 
    Raspberry Pi and requires wiringPi to be installed</description>
  <maintainer email="kai@kaifranke.com">Kai Franke</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>bosch_drivers_common</build_depend>
  <build_depend>gpio_driver</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>bosch_drivers_common</run_depend>
  <run_depend>gpio_driver</run_depend>

</package>
